# NeuralVault

./: .gitignore  AGENTS_CHI.md  LICENSE  README.md  framework.md  learning_path.md  new_database.sql  package-lock.json  package.json  pages.md  tailwind.config.ts  temp.sql  tsconfig.json
src-python/: grok_stream_non_reasoning_1.txt  openai_stream_reasoning_1.txt  pyproject.toml
src-python/app/: main.py  schemas.py
src-python/app/api/: agent.py  chat.py  example.py  ingest.py  new.py  providers.py  search.py  websocket.py
src-python/app/core/: config.py  db.py  events.py  logging.py
src-python/app/models/: sql_models.py
src-python/app/services/: agent_service.py  file_service.py  llm_service.py  vector_service.py
src-python/app/workers/: processors.py  queue_manager.py
src-python/scripts/: test_sidecar.py  validate_db.py
src-python/test/: google_stream_multi_example.py  grok.py  test_anthropic.py  test_anthropic_stream.py  test_gemini.py  test_gemini_stream.py  test_gemini_stream_multi.py  test_openai_stream.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0bb862c2a03afffb3d69637fd0ef29b59a056a539f4e09c2850ee5427790371c.json  query-17c434a61fa1e5865f1303876f9a3940f461327a5985c459a16f22f4b65f852f.json  query-1a007ea238dc49678d5f4ee831e0ed1733e795e226396c17c9aa820b863e44b0.json  query-1c94073a6c26b31ea3afb0ee41ed824a3e2e2722b80100721237f080054584f8.json  query-28476a238bad497aa97a7755fbf7a6649a36e7f569bea2e85689a0a137d30bdc.json  query-312ea2d3ccd1ebde62725616fa6eb02cd7a2373b3ba1aa21e1d80a36ea7e8c66.json  query-390a530a271f89743cc1ff92de826b7670d6c873a248b1c156f47637dc34c22b.json  query-3b98608c17b531faaff33dfc653095f8cd8521077317bc7e617833cc91146c1a.json  query-4166f0d297c3079bfc9c8813a6c4cfb48168957179aedd57663ac5369cc03738.json  query-469a6bf22f5d7deec3190d9da2cf8d01a966d9cd4470d002f1cf36f87023294d.json  query-4cc8ccd0102598d5946773a89fbb391feb4cd894154941900d5b8b1a6ac9b6e9.json  query-53363d25f0881b497dfebde159a6fddecc734288810ec75019e7b937e251d0b5.json  query-53df8a2856a7f23afd276a03b25926d5842653a8b974f0d92904521bc1bdcbcc.json  query-5a9d259b67e6c950bc8c79b72aa896891d765282ac0c2d04fa10e92d79eebed8.json  query-68ff288884e31cc51de768ffb308a3c2809509ce057fb1815a8c6e3ccf8d0148.json  query-75dfb3bd06a4f0f3a3b44d76cd12f30e8a9280877d6e4a5c55252dd95b24c883.json  query-7627d6b60a008a3401a4af3c5520ee8ff4058bbaa7c3a0acfbe0e2c89436266d.json  query-793c6865a830a3b0ad70f08d34f6eba33efc6367160f94a457763a6b2f5365c8.json  query-7dfbf1ee0923b917ba35a5ce5e5c7a4d62c77d4e7674c686675feea765070cb4.json  query-847264ef3ad19a0a43870a49e5140f591b75811eca810e4bd5b5413a1d292496.json  query-960c630f7939029f810dffb0de713c11b17cf3475be3ee31d895379fe9909e95.json  query-980e5c5752adf404c0f97542dc40fde1c833a5fc6db6853225efc3a721c2f9a2.json  query-9cbd8a387b7a0fe287e3ebc8ff5cc78cc8f3eed0875bd6ccd747a1c2228e56d0.json  query-a457df39242dc9635f2b6b92a8f822e81178fb9d1e7a4bdb0361bbfa009daccd.json  query-a73deb4e5a2dc8f527347f0a30591a5fbf868c9400315e24a689759c9f443ec0.json  query-aa312c063be4c4354e6e63695bc484e0516a4759fd28dd0780bd78689a03d35f.json  query-b12ae295ac78965617bdde24f031ab2c2afbf855e50d74945653e449cfa98c25.json  query-b84fab7a40f9374b9fd5abddd7b6abdba45d0f9ef17d03b2afdd1965c927a8d8.json  query-bb08b30e1dee04a8696ab07839ba7d8125bcbda4b17e70d2663e27dda1e10138.json  query-bd83d691e4aac6e6a9eb6c1d5a8a89747b6bd679c7d6b86daab818662b9c08a6.json  query-c0690bf0030323d4eec59148e653fdb487770621538698858fe72b0939c4f77d.json  query-ccf3f57468b9270fff4dfe7839ed75fc74898c6dfb5306b5d0d06e2f4cd6c7bb.json  query-d402f8aad1804409464b7927c8c2e23e08aff4082255c989e33ee61000ac7089.json  query-d58c884e8fe185479f8974f39772b17327962bb6bb19a33a1ace3e891d1ce05e.json  query-d8014b9e4578f60af9b47f281378acc78c9e98b31f20c788196548be0f421d63.json  query-d8f4d8481b6d5b2f6e39bcc4e2956fdbab845199d6903dc352f762c09d83729c.json  query-d9ccc84db4ecce1514b0b0ed9e61bea184d7418a6a1d7e251a0059790a7f23b6.json  query-d9d12f7073e48f4ba3799bab873e1f323f69d7f356f146f1e5c4882a42e9e7c6.json  query-e053bc6cde5df01395ca49f3e9ccb41248292f02cfd3ce21dcf541a53a4a84dc.json  query-e71ea35dd904fa45d0f8d12da4ee28a7694837a3322b66146a074d43c2c98a1e.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241006120000_init.sql
src-tauri/src/: app_state.rs  commands.rs  db.rs  error.rs  lib.rs  main.rs  sidecar.rs
src-tauri/src/commands/: ai_config.rs  chat.rs  chat_stream.rs  clipboard.rs  dashboard.rs  edges.rs  mod.rs  nodes.rs  python.rs  resources.rs  search.rs  tasks.rs  topics.rs  types.rs
src-tauri/src/db/: chat.rs  edges.rs  mod.rs  nodes.rs  pool.rs  resources.rs  revisions.rs  tasks.rs  tests.rs  topics.rs  types.rs
src-tauri/src/utils/: file.rs  (+5 more)
(+180 files in other folders)
