[project]
name = "neuralvault-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asnly1", email = "asnly1013@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.125.0",
    "fastembed>=0.7.4",
    "google-genai>=1.56.0",
    "llama-index-core>=0.14.10",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "pyinstaller>=6.17.0",
    "qdrant-client>=1.16.2",
    "uvicorn[standard]>=0.38.0",
    "xai-sdk>=1.5.0",
]
